--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>共通テスト数学：最初の1手</title>
     
-    <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="icon.png">
 
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="theme-color" content="#007AFF">
+
+    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="icon" type="image/png" href="icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="icon.png"> -->
+    
     <script>
         window.MathJax = {
             tex: {
